spacing fix
on search results

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ input#searchTerm.focus {
 #instructions {
 	display: block;
 	text-align: center;
-	margin: 50px auto;
+	margin: 50px auto 0 auto;
 	width: 50%;
 	font-family: "Lucida Grande", sans-serif;
 	font-size: 12px;
